# windbg-mcp-server

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test_mcp.ps1  test_mcp.py  test_simple.ps1
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/debugger/: client.rs  mod.rs  output.rs  session.rs  thread.rs
src/server/: handler.rs  mod.rs
src/types/: mod.rs
tests/: mcp_server_test.rs  unit_tests.rs
